Another z-index fix

--- a/main.css
+++ b/main.css
@@ -34,6 +34,7 @@ main > * {
     display: flex;
     justify-content: space-between;
     padding: 0 1.5em;
+    z-index: 10;
 }
 
 .banner {
